--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,13 @@
                 android:text="Webview Page"
                 android:layout_marginTop="16dp"/>
 
+            <Button
+                android:id="@+id/animationView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Animation Page"
+                android:layout_marginTop="16dp"/>
+
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
