--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,14 @@
                 android:id="@+id/loadImageView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Load Internet Image Page"
+                android:text="Load Internet Image and Lottie"
+                android:layout_marginTop="16dp"/>
+
+            <Button
+                android:id="@+id/adMobView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Admob View"
                 android:layout_marginTop="16dp"/>
 
             <ImageView
