--- a/app/src/main/res/layout/activity_admob.xml
+++ b/app/src/main/res/layout/activity_admob.xml
@@ -10,32 +10,23 @@
     >
 
 
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/banner_ad_view"
-        android:layout_width="match_parent"
+    <Button
+        android:layout_marginTop="20dp"
+        android:id="@+id/admob"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad"
-        android:layout_gravity="center"
+        android:text="Admob View"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         />
 
     <LinearLayout
+        android:id="@+id/banner_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_below="@+id/banner_ad_view"
-        android:gravity="center">
-
-        <Button
-            android:layout_marginTop="20dp"
-            android:id="@+id/admob"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Admob View"
-            />
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
     </LinearLayout>
-
 
 
 </RelativeLayout>
