--- a/app/src/main/res/layout/activity_admob.xml
+++ b/app/src/main/res/layout/activity_admob.xml
@@ -25,7 +25,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center">
     </LinearLayout>
 
 
